# openapi2httpie

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/openapi2httpie/: __init__.py  __main__.py  cli.py  errors.py  examples.py  extract.py  loader.py  model.py  resolver.py
src/openapi2httpie/emitters/: __init__.py  httpie.py  postman.py
tests/: test_cli.py  test_e2e_httpie.py  test_emit_httpie.py  test_emit_postman.py  test_examples.py  test_extract.py  test_loader.py  test_real_specs.py  test_regressions.py  test_resolver.py
